[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Unit/Worker.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Stickman.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/units/mens/worker_green.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16.5, 15.5 )

[node name="Worker_blue" instance=ExtResource( 2 )]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="0"]
texture = ExtResource( 3 )
centered = false

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( 16.5, 16.5 )
shape = SubResource( 1 )

[node name="HP_bar" parent="." index="2"]
margin_left = -4.0
margin_top = -9.0
margin_right = 34.0
value = 100.0

[node name="StandingTimer" type="Timer" parent="." index="3"]

[node name="DamagePos" type="Position2D" parent="." index="4"]
visible = false

[node name="TimerNewBuild" type="Timer" parent="." index="5"]

[node name="TimerBuild" type="Timer" parent="." index="6"]

[connection signal="timeout" from="StandingTimer" to="." method="_on_StandingTimer_timeout"]
[connection signal="timeout" from="TimerNewBuild" to="." method="_on_TimerNewBuild_timeout"]
[connection signal="timeout" from="TimerBuild" to="." method="_on_Timer_timeout"]
